Made some changes to demonstrate how openapi specs picks the change when you make some changes in related code.
