# src/main/java/com/shashtra/openapidemo/controller/data/CreateUserResponse.java
@@ -4,5 +4,4 @@ package com.shashtra.openapidemo.controller.data;
  **  author: Hariom
  **  since: 23/07/22
  *****************/
-public class CreateUserResponse extends GetUserResponse {
-}
+public class CreateUserResponse extends GetUserResponse {}
